--- a/pom.xml
+++ b/pom.xml
@@ -27,13 +27,16 @@
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
     <java.version>21</java.version>
+    <!-- springdoc is not managed by Spring Boot's dependency BOM -->
+    <springdoc.version>2.0.0</springdoc.version>
     <!-- force at least version 2.16 due to https://logging.apache.org/log4j/2.x/security.html -->
 
-    <log4j.version>2.16.0</log4j.version>
+    <log4j.version>2.17.1</log4j.version>
     <openapi-generator-maven-plugin.version>6.2.1</openapi-generator-maven-plugin.version>
     <jackson-databind-nullable.version>0.2.3</jackson-databind-nullable.version>
     <commons-lang3.version>3.11</commons-lang3.version>
-    <keycloak-admin-client.version>17.0.0</keycloak-admin-client.version>
+    <!-- Keycloak 17.x is javax.* based; Spring Boot 4.x is jakarta.* based -->
+    <keycloak-admin-client.version>24.0.5</keycloak-admin-client.version>
     <powermock-module-junit4.version>2.0.2</powermock-module-junit4.version>
     <powermock-api-mockito2.version>2.0.2</powermock-api-mockito2.version>
     <easy-random-core.version>4.3.0</easy-random-core.version>
@@ -45,11 +48,6 @@
     <liquibase-maven-plugin.version>4.1.1</liquibase-maven-plugin.version>
     <owasp-java-html-sanitizer.version>20211018.2</owasp-java-html-sanitizer.version>
     <liquibase-core.version>4.9.1</liquibase-core.version>
-    <hibernate-validator.version>6.1.6.Final</hibernate-validator.version>
-    <spring-security-test.version>5.5.7</spring-security-test.version>
-    <spring-boot-starter-data-mongodb.version>2.7.5</spring-boot-starter-data-mongodb.version>
-    <spring-boot-starter.version>2.6.15</spring-boot-starter.version>
-    <spring-data-mongodb.version>3.3.5</spring-data-mongodb.version>
     <ehcache.version>2.10.9.2</ehcache.version>
   </properties>
 
@@ -74,7 +72,6 @@
     <dependency>
       <groupId>org.springframework.boot</groupId>
       <artifactId>spring-boot-starter-data-mongodb</artifactId>
-      <version>${spring-boot-starter-data-mongodb.version}</version>
     </dependency>
     <dependency>
       <groupId>org.springframework.boot</groupId>
@@ -111,11 +108,6 @@
         </exclusion>
       </exclusions>
     </dependency>
-    <dependency>
-      <groupId>org.hibernate.validator</groupId>
-      <artifactId>hibernate-validator</artifactId>
-      <version>${hibernate-validator.version}</version>
-    </dependency>
     <!-- Spring actuator  -->
     <dependency>
       <groupId>org.springframework.boot</groupId>
@@ -151,6 +143,7 @@
     <dependency>
       <groupId>org.springdoc</groupId>
       <artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
+      <version>${springdoc.version}</version>
     </dependency>
 
     <!-- Lombok dependencies -->
@@ -186,18 +179,10 @@
       <version>${keycloak-admin-client.version}</version>
     </dependency>
 
-    <!-- Mongo dependencies -->
-    <dependency>
-      <groupId>org.springframework.data</groupId>
-      <artifactId>spring-data-mongodb</artifactId>
-      <version>${spring-data-mongodb.version}</version>
-    </dependency>
-
     <!-- Test scope dependencies -->
     <dependency>
       <groupId>org.springframework.boot</groupId>
       <artifactId>spring-boot-starter-test</artifactId>
-      <version>${spring-boot-starter.version}</version>
       <scope>test</scope>
       <exclusions>
         <exclusion>
@@ -209,7 +194,6 @@
     <dependency>
       <groupId>org.springframework.security</groupId>
       <artifactId>spring-security-test</artifactId>
-      <version>${spring-security-test.version}</version>
       <scope>test</scope>
     </dependency>
     <dependency>
@@ -217,11 +201,6 @@
       <artifactId>de.flapdoodle.embed.mongo</artifactId>
       <version>4.13.0</version>
       <scope>test</scope>
-    </dependency>
-    <dependency>
-      <groupId>de.flapdoodle.embed</groupId>
-      <artifactId>de.flapdoodle.embed.mongo.spring26x</artifactId>
-      <version>4.13.0</version>
     </dependency>
 
     <dependency>
@@ -625,23 +604,6 @@
             <phase>compile</phase>
           </execution>
         </executions>
-      </plugin>
-      <plugin>
-        <groupId>org.openrewrite.maven</groupId>
-        <artifactId>rewrite-maven-plugin</artifactId>
-        <version>5.30.0</version>
-        <configuration>
-          <activeRecipes>
-            <recipe>org.openrewrite.java.spring.boot2.UpgradeSpringBoot_2_6</recipe>
-          </activeRecipes>
-        </configuration>
-        <dependencies>
-          <dependency>
-            <groupId>org.openrewrite.recipe</groupId>
-            <artifactId>rewrite-spring</artifactId>
-            <version>5.9.0</version>
-          </dependency>
-        </dependencies>
       </plugin>
     </plugins>
   </build>
